--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <script>
-window.location =“https://www.hydrochoy.hk”;
+window.location ="https://www.hydrochoy.hk";
 </script>
 </body>
 </html>
